Fix slick slider preload

--- a/wp-content/themes/chugach-corp/package.json
+++ b/wp-content/themes/chugach-corp/package.json
@@ -7,34 +7,36 @@
     "autoprefixer": "*",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "browser-sync": "*",
+    "browser-sync": "^2.26.7",
     "css-mqpacker": "^6.0.2",
     "del": "^3.0.0",
     "foundation-sites": "6.3.1",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "*",
+    "gulp-autoprefixer": "^6.1.0",
     "gulp-babel": "^7.0.1",
     "gulp-cached": "*",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.0",
-    "gulp-filter": "*",
-    "gulp-imagemin": "^3.4.0",
+    "gulp-filter": "^6.0.0",
+    "gulp-imagemin": "^6.0.0",
     "gulp-notify": "*",
     "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.3.0",
+    "gulp-postcss": "7.0",
     "gulp-rename": "*",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "*",
     "gulp-sort": "^1.1.1",
     "gulp-sourcemaps": "*",
-    "gulp-uglify": "*",
+    "gulp-uglify": "^3.0.2",
     "gulp-wp-pot": "^1.1.1",
-    "gulp-zip": "*",
+    "gulp-zip": "^5.0.0",
     "motion-ui": "*",
     "postcss-focus": "*",
     "slick-carousel": "*"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "postcss-image-set-function": "^3.0.1"
+  },
   "scripts": {
     "test": "echo \"No test specified\""
   },
