--- a/wp-content/themes/chugach-corp/package.json
+++ b/wp-content/themes/chugach-corp/package.json
@@ -30,6 +30,7 @@
     "gulp-uglify": "^3.0.2",
     "gulp-wp-pot": "^1.1.1",
     "gulp-zip": "^5.0.0",
+    "isotope-layout": "^3.0.6",
     "motion-ui": "*",
     "postcss-focus": "*",
     "slick-carousel": "*"
