--- a/.wpe-devkit/wpe-config.yaml
+++ b/.wpe-devkit/wpe-config.yaml
@@ -1,4 +1,4 @@
-email: chugachcorp
+email: chugachcorpstg
 ssh_key: /Users/kylerumble/Library/Application Support/Local/ssh/wpe-connect
 update_check: false
 analytics: false
