--- a/wp-content/themes/chugach-corp/package.json
+++ b/wp-content/themes/chugach-corp/package.json
@@ -39,7 +39,11 @@
     "postcss-image-set-function": "^3.0.1"
   },
   "scripts": {
-    "test": "echo \"No test specified\""
+    "test": "echo \"No test specified\"",
+    "preinstall": "npx npm-force-resolutions"
+  },
+  "resolutions": {
+    "graceful-fs": "^4.2.4"
   },
   "repository": {
     "type": "git",
